--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="todoApp">
         <!-- title -->
-        <h1>Ultimate Todo app 📝</h1>
+        <h1>📆 Ultimate Todo app</h1>
         <!-- todo list section -->
         <ul class="todolist"></ul>
         <!-- add todo input field -->
