--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
           />
           <i class="fa-solid fa-plus" id="addTodo"></i>
         </div>
+        <!-- clear all -->
+        <div class="updateStatus">
+          <p>total tasks: <span id="totalTodo">0</span></p>
+          <p>completed: <span id="countCompleted">0</span></p>
+          <button id="deleteAll">delete all</button>  
+        </div>
       </div>
     </div>
 
